--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,8 @@
-Flask-Cache==0.13.1
+Flask==0.12.2
+requests==2.11.1
+Werkzeug==0.14.1
+simplejson==3.15.0
+pymongo==3.7.2
+cachetools==3.0.0
+flask_cache==0.13.1
+flask_pymongo==2.2.0
